fixed footer, added glyphicons

--- a/test.html
+++ b/test.html
@@ -1,41 +1,32 @@
 <! DOCTYPE html>
 <html lang="en">
 
-<head>
+<head bgcolor="#E6E6FA">
 	<title> Webpage Title </title>
 	<meta charset="utf-8" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<style type = "text/css">
-		html,
-		body {
-			height:100%
-		}
-	</style>
 </head>
 
-<body class="body" bgcolor="red">
-	<div class="container-fluid" style="min-height:95%; " bgcolor="red">
+<body class="body" bgcolor="#E6E6FA">
+	<div class="container-fluid" style="min-height:95%; ">
 		<div class="row">
 			<div class="col-sm-4">
 				<br>
 				<center>
-					<h3>Company Name</h3>
+					<h3><font face="Arial">ZEUS</font></h3>
 				</center>
 			</div>
 			<div class="col-sm-4">
 				<br>
 				<center>
-				<h3>Shop | Contact | Search </h3>
-				<br>
+				<p><h3><i class="glyphicon glyphicon-envelope"></i> | <i class="glyphicon glyphicon-envelope"></i> | <i class="glyphicon glyphicon-envelope"></i></h3>
 				</center>
 			</div>
 			<div class="col-sm-4">
 				<br>
 				<center>
-				<h3>Social | Social | Social </h3>
+				<p><h3><i class="glyphicon glyphicon-envelope"></i> instagram | <i class="glyphicon glyphicon-envelope"></i> facebook | <i class="glyphicon glyphicon-envelope"></i> Email </h3>
 				<br>
 		</div><hr>
 
@@ -45,6 +36,7 @@
 				<div class="content" style="">
 				<br><br>
 				<center>
+					<!-- backgroun should be png and button should be centered in image -->
 						<h1> Slogan here </h1>
 						<h6> Pre Order Button here</h6>
 						<img src="download.jpg" alt="Italian Trulli">
@@ -53,26 +45,26 @@
 			</div>
 		</div>
 	</div>
-	<footer style ='position:fixed'>
-		<div class="container-fluid" style="max-height:25%; ">
+	<footer>
+		<div class="container-fluid">
+				<div class="col-sm-4">
+				<center>
+					<h3>Our Story</h3>
+					<img src="sample.jpg" style="width:100%;height:20%;">
+				</center>
+			</div>
 			<div class="col-sm-4">
 			<center>
-				<h3>Our Story</h3>
-				<img src="download.jpg" alt="Italian Trulli">
+				<h3>Give Aways</h3>
+				<img src="sample.jpg" style="width:100%;height:20%;">
 			</center>
 		</div>
 		<div class="col-sm-4">
 		<center>
-			<h3>Give Aways</h3>
-			<img src="download.jpg" alt="Italian Trulli">
+			<h3>Upcoming</h3>
+			<img src="sample.jpg" style="width:100%;height:20%;">
 		</center>
 	</div>
-	<div class="col-sm-4">
-	<center>
-		<h3>Upcoming</h3>
-		<img src="download.jpg" alt="Italian Trulli">
-	</center>
-</div>
 </div>
 	</footer>
 </body>
